--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>{{title}}</title>
-        <link rel="icon" href="WeatherAppIcon.ico" type="image/x-icon" />
+        <link rel="icon" href="WeatherAppIcon.png" type="image/png" />
         <link rel="stylesheet" href="css/styles.css"/>
         <link rel="stylesheet" href="css/styles1.css"/>
     </head>
